[project]
name = "udj"
version = "0.1.0"
description = "TODO"
authors = [
    { name = "yokotoka", email = "hey@yokotoka.is" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/udj"]